@@ -24,6 +24,11 @@ same directory will be used for snapshots from image windows.
 <UL>
 <LI><B>Objects...</B>:&emsp;Open the object edit dialog.
 <LI><B>Controls...</B>:&emsp;Open the display control dialog.
+<LI><B>Rotation...</B>:&emsp;Open the rotation tool.  The arrows rotate the
+  model, <B>+</B> and <B>-</B> increase or decrease the angular step size
+  together with the model rotation speed, and the circular arrow in the middle
+  toggles continuous rotation on and off.  If this tool is open when Model
+  View closes, it will be reopened automatically along with Model View.
 <LI><B>Object List...</B>:&emsp;Show objects by name and color with On/Off
 buttons and define object groups.
 <LI><B>Background...</B>:&emsp;Change the background color.
